# ghc-compiler-notes

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  ChangeLog.md  LICENSE  Makefile  README.md  cabal.project  cabal.project.freeze  floskell.json  ghc-compiler-notes.cabal  package.yaml  stack.yaml
.circleci/: config.yml
app/: Comment.hs  ExtractNotes.hs
conf/: ghc-8.6.4.yml
doc/: ParsingNotes.md
docs/: .buildinfo  README.md  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/ghc/compiler/: README.md
docs/ghc/compiler/backpack/: BkpSyn.md  DriverBkp.md  NameShape.md  README.md  RnModIface.md
docs/ghc/compiler/basicTypes/: Avail.md  BasicTypes.md  ConLike.md  DataCon.md  Demand.md  FieldLabel.md  Id.md  IdInfo.md  Lexeme.md  Literal.md  MkId.md  Module.md  Name.md  NameCache.md  NameEnv.md  NameSet.md  OccName.md  PatSyn.md  README.md  RdrName.md  SrcLoc.md  UniqSupply.md  Unique.md  Var.md  VarEnv.md  VarSet.md
docs/ghc/compiler/cbits/: README.md
docs/ghc/compiler/cmm/: Bitmap.md  BlockId.md  CLabel.md  Cmm.md  CmmBuildInfoTables.md  CmmCallConv.md  CmmCommonBlockElim.md  CmmContFlowOpt.md  CmmExpr.md  CmmImplementSwitchPlans.md  CmmInfo.md  CmmLayoutStack.md  CmmLint.md  CmmLive.md  CmmMachOp.md  CmmMonad.md  CmmNode.md  CmmOpt.md  CmmPipeline.md  CmmProcPoint.md  CmmSink.md  CmmSwitch.md  CmmType.md  CmmUtils.md  Debug.md  MkGraph.md  PprC.md  PprCmm.md  PprCmmDecl.md  PprCmmExpr.md  README.md  SMRep.md
docs/ghc/compiler/codeGen/: CgUtils.md  README.md  StgCmm.md  StgCmmArgRep.md  StgCmmBind.md  StgCmmClosure.md  StgCmmCon.md  StgCmmEnv.md  StgCmmExpr.md  StgCmmExtCode.md  StgCmmForeign.md  StgCmmHeap.md  StgCmmHpc.md  StgCmmLayout.md  StgCmmMonad.md  StgCmmPrim.md  StgCmmProf.md  StgCmmTicky.md  StgCmmUtils.md
docs/ghc/compiler/coreSyn/: CoreArity.md  CoreFVs.md  CoreLint.md  CoreOpt.md  CorePrep.md  CoreSeq.md  CoreStats.md  CoreSubst.md  CoreSyn.md  CoreTidy.md  CoreUnfold.md  CoreUtils.md  MkCore.md  PprCore.md  README.md  TrieMap.md
docs/ghc/compiler/deSugar/: Check.md  Coverage.md  Desugar.md  DsArrows.md  DsBinds.md  DsCCall.md  DsExpr.md  DsForeign.md  DsGRHSs.md  DsListComp.md  DsMeta.md  DsMonad.md  DsUsage.md  DsUtils.md  Match.md  MatchCon.md  MatchLit.md  PmExpr.md  README.md  TmOracle.md
docs/ghc/compiler/ghci/: ByteCodeAsm.md  ByteCodeGen.md  ByteCodeInstr.md  ByteCodeItbls.md  ByteCodeLink.md  ByteCodeTypes.md  Debugger.md  DebuggerUtils.md  GHCi.md  Linker.md  README.md  RtClosureInspect.md
docs/ghc/compiler/hsSyn/: Convert.md  HsBinds.md  HsDecls.md  HsDoc.md  HsDumpAst.md  HsExpr.md  HsExtension.md  HsImpExp.md  HsLit.md  HsPat.md  HsSyn.md  HsTypes.md  HsUtils.md  PlaceHolder.md  README.md
docs/ghc/compiler/iface/: BinFingerprint.md  BinIface.md  BuildTyCl.md  FlagChecker.md  IfaceEnv.md  IfaceSyn.md  IfaceType.md  LoadIface.md  MkIface.md  README.md  TcIface.md  ToIface.md
docs/ghc/compiler/llvmGen/: Llvm.md  LlvmCodeGen.md  LlvmMangler.md  README.md
docs/ghc/compiler/main/: Annotations.md  Ar.md  CmdLineParser.md  CodeOutput.md  Constants.md  DriverMkDepend.md  DriverPhases.md  DriverPipeline.md  DynFlags.md  DynamicLoading.md  Elf.md  ErrUtils.md  FileCleanup.md  Finder.md  GHC.md  GhcMake.md  GhcMonad.md  GhcPlugins.md  HeaderInfo.md  Hooks.md  HscMain.md  HscStats.md  HscTypes.md  InteractiveEval.md  InteractiveEvalTypes.md  PackageConfig.md  Packages.md  PipelineMonad.md  PlatformConstants.md  Plugins.md  PprTyThing.md  README.md  StaticPtrTable.md  SysTools.md  TidyPgm.md
docs/ghc/compiler/nativeGen/: AsmCodeGen.md  CPrim.md  Dwarf.md  Format.md  Instruction.md  NCGMonad.md  PIC.md  PprBase.md  README.md  Reg.md  RegClass.md  TargetReg.md
docs/ghc/compiler/parser/: ApiAnnotation.md  Ctype.md  HaddockUtils.md  README.md  RdrHsSyn.md
docs/ghc/compiler/prelude/: ForeignCall.md  KnownUniques.md  PrelInfo.md  PrelNames.md  PrelRules.md  PrimOp.md  README.md  THNames.md  TysPrim.md  TysWiredIn.md
docs/ghc/compiler/profiling/: CostCentre.md  ProfInit.md  README.md
docs/ghc/compiler/rename/: README.md  RnBinds.md  RnEnv.md  RnExpr.md  RnFixity.md  RnHsDoc.md  RnNames.md  RnPat.md  RnSource.md  RnSplice.md  RnTypes.md  RnUnbound.md  RnUtils.md
docs/ghc/compiler/simplCore/: CSE.md  CallArity.md  CoreMonad.md  Exitify.md  FloatIn.md  FloatOut.md  LiberateCase.md  OccurAnal.md  README.md  SAT.md  SetLevels.md  SimplCore.md  SimplEnv.md  SimplMonad.md  SimplUtils.md  Simplify.md
docs/ghc/compiler/simplStg/: README.md  RepType.md  SimplStg.md  StgCse.md  StgStats.md  UnariseStg.md
docs/ghc/compiler/specialise/: README.md  Rules.md  SpecConstr.md  Specialise.md
docs/ghc/compiler/stgSyn/: CoreToStg.md  README.md  StgLint.md  StgSyn.md
docs/ghc/compiler/stranal/: DmdAnal.md  README.md  WorkWrap.md  WwLib.md
docs/ghc/compiler/typecheck/: FamInst.md  FunDeps.md  Inst.md  README.md  TcAnnotations.md  TcArrows.md  TcBackpack.md  TcBinds.md  TcCanonical.md  TcDeriv.md  (+38 more)
dummy_includes/: DerivedConstants.h  GHCConstantsHaskellExports.hs  GHCConstantsHaskellType.hs  GHCConstantsHaskellWrappers.hs  primop-can-fail.hs-incl  primop-code-size.hs-incl  primop-commutable.hs-incl  primop-data-decl.hs-incl  primop-fixity.hs-incl  primop-has-side-effects.hs-incl  primop-list.hs-incl  primop-out-of-line.hs-incl  primop-primop-info.hs-incl  primop-strictness.hs-incl  primop-tag.hs-incl  primop-vector-tycons.hs-incl  primop-vector-tys-exports.hs-incl  primop-vector-tys.hs-incl  primop-vector-uniques.hs-incl
sample/: UI.hs  UI.txt
sphinx-docs/: .gitignore
sphinx-docs/source/: conf.py
src/: Main.hs  Parser.hs
src/Data/Text/: Extra.hs  Monadic.hs
src/GHC/Compiler/: Notes.hs
test/: ParserSpec.hs  ResourceTests.hs
test/resource/: TestSrc.hs
tests/: UnitTests.hs
tests/resources/failure/: Multiline.hs
(+1689 files in other folders)
