cabal-version: 2.0
name: ghc-compiler-notes
version: 0.1.0.0
license: MIT
license-file: LICENSE
maintainer: ioi.joi.koi.loi@gmail.com
author: myuon
tested-with: ghc ==8.4.4 ghc ==8.6.3
homepage: https://github.com/myuon/ghc-compiler-notes
category: Language
build-type: Simple
extra-source-files:
    ChangeLog.md
    README.md

flag dev
    description:
        Turn on development settings.
    default: False
    manual: True

library
    exposed-modules:
        GHC.Compiler.Notes
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.11 && <5,
        ghc-syntax-highlighter ^>=0.0.3.0,
        text ^>=1.2.3.1
    
    if flag(dev)
        ghc-options: -Wall -Werror -Wcompat -Wincomplete-record-updates
                     -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
                     -Wnoncanonical-monadfail-instances
    else
        ghc-options: -O2 -Wall

executable ghc-compiler-notes
    main-is: app/Comment.hs
    default-language: Haskell2010
    build-depends:
        ghc-compiler-notes ^>= 0.1.0.0,
        base >=4.11 && <5,
        rio ^>=0.1.8.0,
        conduit ^>=1.3.1,
        path-io ^>=1.4.1,
        path ^>=0.6.1
    
    if flag(dev)
        ghc-options: -Wall -Werror
    else
        ghc-options: -O2 -Wall

test-suite unit-tests
    type: exitcode-stdio-1.0
    main-is: Driver.hs
    hs-source-dirs: tests
    other-modules:
        UnitTests
    default-language: Haskell2010
    build-depends:
        ghc-compiler-notes ^>= 0.1.0.0,
        base >=4.11 && <5,
        tasty ^>=1.2,
        tasty-hspec ^>=1.1.5.1
    
    if flag(dev)
        ghc-options: -Wall -Werror
    else
        ghc-options: -O2 -Wall
