cabal-version: 2.4
name:          ghc-compiler-notes
version:       0.1.1.0
license:       MIT
license-file:  LICENSE
maintainer:    ioi.joi.koi.loi@gmail.com
author:        myuon
homepage:      https://github.com/myuon/ghc-compiler-notes
category:      Language
build-type:    Simple

tested-with:
  ghc ==8.6.3
  ghc ==8.6.4

extra-source-files:
  ChangeLog.md
  README.md

flag dev
  description:
    Turn on development settings.
  default: False
  manual: True

common general
  default-language: Haskell2010
  autogen-modules:
    Paths_ghc_compiler_notes
  other-modules:
    Paths_ghc_compiler_notes
  build-depends:
    base                 >= 4.12.0 && < 4.13,
    bytestring           >= 0.10.8 && < 0.11,
    text                 >= 1.2.3  && < 1.3,
    exceptions           >= 0.10.0 && < 0.11,
    capability           >= 0.1.0  && < 0.2,
    transformers         >= 0.5.6  && < 0.6,
    rio                  >= 0.1.8  && < 0.2,
    template-haskell     >= 2.14.0 && < 2.15,

    ghc                  >= 8.6    && < 8.7,
    ghc-boot             >= 8.6    && < 8.7,
    ghc-paths            >= 0.1.0  && < 0.2,
    -- cpphs,

    conduit              >= 1.3.1  && < 1.4,
    containers           >= 0.6.0  && < 0.7,
    directory            >= 1.3.3  && < 1.4,
    filepath             >= 1.4.2  && < 1.5,
    Glob                 >= 0.10.0 && < 0.11,
    regex-applicative    >= 0.3.3  && < 0.4,
    temporary            >= 1.3    && < 1.4,
    yaml                 >= 0.11.0 && < 0.12,
  ghc-options:
    -Wall

  if flag(dev)
    ghc-options:
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields

      -dcore-lint
  else
    ghc-options:
      -O2

  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    PolyKinds
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications

common exec
  build-depends:
    ghc-compiler-notes,
    optparse-applicative >= 0.14.3 && < 0.15,

library
  import: general
  hs-source-dirs: src
  exposed-modules:
    GHC.Compiler.Notes.App
    GHC.Compiler.Notes.Config
    GHC.Compiler.Notes.Parser
    GHC.Compiler.Notes.Parser.Internal
    GHC.Compiler.Notes.Types
    GHC.Compiler.Notes.FormatRstDoc

    GHC.Compiler.Utils.Lexer
    GHC.Compiler.Utils.HeaderOptions

    Data.Text.Monadic

executable ghc-compiler-notes
  import: general, exec
  hs-source-dirs: app
  main-is: Comment.hs

-- This will cause a fail in CircleCI build
--
-- executable extract-notes
--   import: general, exec
--   hs-source-dirs: app
--   main-is: ExtractNotes.hs

test-suite unit-tests
  import: general, exec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: SpecDriver.hs
  build-tool-depends:
    tasty-discover:tasty-discover >= 4.2 && < 4.3,
  build-depends:
    tasty            >= 1.2   && < 1.3,
    tasty-hspec      >= 1.1.5 && < 1.2,
  other-modules:
    ResourceTests
